Sat Apr 26 08:05:36 2014  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_process.rb (test_rlimit_nofile): Don't limit
	  RLIMIT_NOFILE too small.
	  This fix sporadic "[ASYNC BUG] thread_timer: select" on GNU/Linux.

Fri Apr 25 22:54:34 2014  Naohisa Goto  <ngotogenome@gmail.com>

	* lib/fileutils.rb (rmdir): rescue Errno::EEXIST in addition to
	  ENOTEMPTY (and ENOENT), because SUSv3 describes that "If the
	  directory is not an empty directory, rmdir() shall fail and set
	  errno to [EEXIST] or [ENOTEMPTY]" and Solaris uses EEXIST.
	  [Bug #9571] [ruby-dev:48017]

Fri Apr 25 19:16:30 2014  Tanaka Akira  <akr@fsij.org>

	* lib/webrick/utils.rb: Don't rescue LoadError for 'etc' extension.

Fri Apr 25 14:55:59 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (rb_cv_func___builtin_unreachable): try with an
	  external variable not only by a warning, which might not be
	  shown due to the optimization.  [ruby-core:61647] [Bug #9665]

Fri Apr 25 13:11:49 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: NetBSD's ksh, used by configure, needs escapes.

Fri Apr 25 12:51:08 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: correct pthread_setname_np's prototype on NetBSD.
	  [Bug #9586]

Thu Apr 24 23:17:25 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/fileutils.rb (fu_get_uid, fu_get_gid): Etc.getpwnam/getgrnam may
	  returns nil.

	* lib/webrick/utils.rb (su): ditto.

Thu Apr 24 22:55:22 2014  Tanaka Akira  <akr@fsij.org>

	* bootstraptest/test_io.rb: Add etc.so to $" before require 'tmpdir'.

Thu Apr 24 21:09:55 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* man/ruby.1: fix broken link.

Thu Apr 24 20:53:02 2014  Tanaka Akira  <akr@fsij.org>

	* lib/tmpdir.rb: Don't need to rescue LoadError for etc.so.

Thu Apr 24 17:39:53 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c (statfs_inspect): suppress warnings.
	  assume those values won't be larger than LONG_LONG_MAX.
